--- a/Countdown/html/countdown.html
+++ b/Countdown/html/countdown.html
@@ -23,7 +23,7 @@
     </div>
     <div id="head">
         <div id="inpt">
-            <input type="text" id="txt" value="제목을 입력하세요"><br><Br>
+            <input type="text" id="txt" value="제목을 입력하세요."><br><Br>
         </div>
         <div id="indt">
             <input type="date" id="dte">
